<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="15dp"
    android:elevation="20dp"
    android:background="@drawable/custom_bg_curve_left_right_color_white">

    <TextView
        android:id="@+id/id_payment_trip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:drawableEnd="@drawable/ic_account_balance_wallet"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:text="@string/st_payment_shipment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_tv_payment_trip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:drawablePadding="5dp"
        android:text="@string/st_payment_shipment"
        android:textColor="@color/colorOrange"
        android:textSize="19.28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/id_payment_trip"
        app:layout_constraintBottom_toBottomOf="@+id/id_payment_trip"
        app:layout_constraintEnd_toStartOf="@+id/id_payment_trip" />
    <EditText
        android:id="@+id/tv_noTripFees_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/labal_pay_cost"
        android:gravity="center"
        android:textColor="@color/colorOrange"
        android:textSize="16sp"
        android:padding="10sp"
        android:background="@drawable/custom_bt_outer_blue_border"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_payment_trip" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_shipment_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        app:cardBackgroundColor="@color/colorYellowTransparent"
        app:cardCornerRadius="10.25dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_noTripFees_txt"
        card_view:cardElevation="8dp">

        <Button
            android:id="@+id/btn_acceptShipment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:padding="5dp"
            android:text="@string/label_done"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>