<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="Model"
            type="com.devartLab.task.model.HomeResponseModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/id_item_received_trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/id_acc_photo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            imageUrl="@{Model.profile_img}"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorOrange"
            android:src="@drawable/ic_profile_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_name_shipment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:drawableEnd="@drawable/ic_icon_name"
            android:drawablePadding="5dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/label_name_shipment"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/id_acc_photo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name_shipment_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{Model.customer_name}"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/id_name_shipment"
            app:layout_constraintEnd_toStartOf="@+id/id_name_shipment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/id_name_shipment" />

        <TextView
            android:id="@+id/id_phone_shipment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableEnd="@drawable/ic_icon_phone"
            android:drawablePadding="5dp"
            android:text="@string/labal_personal_data_phone"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/id_name_shipment"
            app:layout_constraintTop_toBottomOf="@+id/id_name_shipment" />

        <TextView
            android:id="@+id/tv_phone_shipment_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{Model.phone}"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/id_phone_shipment"
            app:layout_constraintEnd_toEndOf="@+id/tv_name_shipment_txt"
            app:layout_constraintTop_toTopOf="@+id/id_phone_shipment" />


        <TextView
            android:id="@+id/id_from_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:text="@{Model.address_to}"
            android:drawableEnd="@drawable/ic_address"
            android:drawablePadding="5dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/id_name_shipment"
            app:layout_constraintTop_toBottomOf="@+id/id_phone_shipment" />


        <View
            android:id="@+id/id_view"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_from_city" />

        <TextView
            android:id="@+id/id_remove_trip"
            android:layout_width="128dp"
            android:layout_height="36dp"
            android:layout_marginTop="12.85dp"
            android:background="@drawable/round_orange_with_shadow"
            android:gravity="center"
            android:text="@string/st_remove_trip"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_view" />

        <TextView
            android:id="@+id/id_detail_trip"
            android:layout_width="128dp"
            android:layout_height="36dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12.85dp"
            android:background="@drawable/round_yellow"
            android:gravity="center"
            android:text="@string/st_detail_histore_trip"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/id_remove_trip"
            app:layout_constraintTop_toBottomOf="@+id/id_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>